# ncollide_ray_tracing

./: .gitignore  Cargo.toml  README.md
assets/: sphere_scene.json
src/: camera.rs  main.rs  normal_integrator.rs  object.rs  sampler.rs  scene.rs
src/integrators/: ao_integrator.rs  mod.rs  normal_integrator.rs  path_tracing.rs
src/math/: angles.rs  mod.rs  vector_traits.rs
src/object/: mod.rs  object_data.rs  shape_builder.rs
src/object/shapes/: ball.rs  cuboid.rs  metaball.rs  mod.rs  trimesh.rs
src/sampling/: mod.rs  shape_sampling.rs  sphere_sampling.rs
src/shaders/: lambert.rs  mirror.rs  mod.rs
