[package]
name = "ray_tracing"
version = "0.1.0"
authors = ["Victor Cornillere <v.cornillere@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.21.1"
rand = "0.6.5"
ncollide3d = "^0.22"
nalgebra = {version = "^0.20", features = ["serde-serialize"]}
rayon = "1.0.3"
obj = "0.9.0"
serde = {version = "^1.0", features=["derive"]}
serde_json = "^1.0"
